2001-10-01  Matthias Clasen  <matthiasc@poet.de>

	* glib/gscanner.h (GScannerMsgFunc): make third argument
	a gboolean.
	(g_scanner_add_symbol, g_scanner_remove_symbol, 
	g_scanner_foreach_symbol): mark these 
	G_DISABLE_DEPRECATED. (#61469)

	* glib/gscanner.c (g_scanner_msg_handler): make third 
	argument gboolean. (#61468)

2001-10-01  Sven Neumann  <sven@gimp.org>

	* glib/gconvert.c
	* glib/gspawn-win32.c
	* glib/gspawn.c: some minor documentation fixes.

2001-09-29  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	Add build/win32/dirent/Makefile to the list of makefiles

2001-09-30  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c
	* glib/gwin32.h
	* glib/glib.def: Remove own implementation of dirent
	functions. Instead, gcc (mingw) users should go ahead and use the
	<dirent.h> included with the mingw gcc, and the dirent functions
	included in libmingw32, while MSVC users can use the same (public
	domain) code, extracted from mingw-runtime sources and placed in
	build/win32/dirent.[ch].

	* glib/gwin32.c (get_package_directory_from_module,
	g_win32_get_package_installation_directory): Use static lock to
	protect static hash table.

Sat Sep 29 02:33:14 2001  George Lebl <jirka@5z.com>

	* tests/testglib.c (main): cast the string size to gulong and use %lu
	  for printing to avoid 64bit issues

	* glib/gstrfuncs.[ch] (g_ascii_strncasecmp): Change the 'n' argument 
	  to gsize instead guint.

Fri Sep 28 19:41:32 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/libcharset/* configure.in: Fix macros from libcharset
	to work with autoconf-2.5x. (From Laszlo Peter.)

2001-09-27  Matthias Clasen  <matthiasc@poet.de>

	* glib/gstring.c: Fix inline docs for g_string_prepend_unichar.

2001-09-29  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Add quotes around test values. This fixes a minor
	  annoying warning if platform is not win32.

2001-09-27  Manish Singh  <yosh@gimp.org>

	* glib/grand.c (g_rand_new): fix typo (#if->#ifdef) so it compiles
	again.
